fix homepage info card overlap the header

--- a/src/components/Home/Main/styles.scss
+++ b/src/components/Home/Main/styles.scss
@@ -5,7 +5,7 @@
 .about {
     display: flex; // justify-content: space-between;
     align-items: center;
-    height: 80vh;
+    height: 100vh;
 }
 
 .info {
